2000-03-14  Akim Demaille  <akim@epita.fr>

	* autoheader.sh: Use run_m4f, not run_m4.

2000-03-14  Akim Demaille  <akim@epita.fr>

	Introduce AC_SUBST(VAR, VAL).

	* acgeneral.m4 (_AC_INIT_PARSE_ARGS): Stop global double quoting,
	failed experiment.
	Merge all the var=val AC_SUBST(var) into AC_SUBST(var, val).
	(AC_SUBST): Implement support for 2nd arg.
	* doc/autoconf.texi (Setting Output Variables): Adjust.

2000-03-13  Akim Demaille  <akim@epita.fr>

	Simplify the diversions naming system.
	Suggested by Alexandre Oliva and Lars J. Aas

	* libm4.m4 (ifndef): New macro.
	* acgeneral.m4 (AC_DIVERT): New macro, maps a diversion name to
	its value.  The diversions now have a short name, e.g., `NOTICE',
	instead of the former macros which had long names, e.g.,
	`AC_DIVERSION_NOTICE'.
	(AC_DIVERT_PUSH): Adjust.
	(AC_DIVERT_POP): Use ifndef.
	(AC_DIVERSION_CURRENT): Rename as `AC_DIVERT_DIVERSION' to stay
	within the `AC_DIVERT' name domain.
	Adjust all callers.
	* acspecific.m4: Adjust all callers.

2000-03-13  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (Invoking autoconf): Update documentation of
	`autoconf --trace'.

2000-03-13  Akim Demaille  <akim@epita.fr>

	* autoconf.sh (tmpbase): New var.  Adjust trap code and other tmp
	file names.
	(translate_awk::BEGIN): Set RS to "\0" so that the whole file be a
	single record.
	(translate_awk::trans): Convert from array to function.
	(translate_awk::error): New function.
	(translate_awk::main action): Implement support for ${sep}@ and
	${sep}*.  Use trans() and error().
	(translate_awk): Don't put space before user functions call, it is
	not portable.
	Remove trailing `;', this is not C :).
	(task trace): Quote `$traces' when you eval it, to protect the
	white spaces.
	Propagate `translate_awk' failures to `autoconf.sh'.
	Translate the quadrigraphs.

2000-03-13  Akim Demaille  <akim@epita.fr>

	Trap on 0 is not executed when `exit' is called without argument.

	* autoheader.sh (trap 1 2 13 15): s/exit/exit $?/.